--- a/ci/test-values.yaml
+++ b/ci/test-values.yaml
@@ -49,11 +49,11 @@ config:
       dir: "/data/store"
 
   querier:
-    store_gateway_addresses: "dns+cortex-store-gateway-headless:9095"
+    store_gateway_addresses: 'dns+{{ include "cortex.storeGatewayFullname" $ }}-headless:9095'
 
   memberlist:
     join_members:
-    - "cortex-memberlist.cortex"
+      - '{{ include "cortex.fullname" $ }}-memberlist'
 
 ingester:
   replicas: 1
@@ -72,3 +72,60 @@ querier:
     enabled: true
 nginx:
   replicas: 1
+
+tags:
+  blocks-storage-memcached: true
+memcached:
+  enabled: true
+  architecture: standalone
+  replicaCount: 1
+  resources:
+    # https://github.com/helm/helm/issues/9136
+    requests:
+      cpu: 0
+      memory: 0
+memcached-index-read:
+  enabled: true
+  architecture: standalone
+  replicaCount: 1
+  resources:
+    requests:
+      cpu: 0
+      memory: 0
+memcached-index-write:
+  enabled: true
+  architecture: standalone
+  replicaCount: 1
+  resources:
+    requests:
+      cpu: 0
+      memory: 0
+memcached-frontend:
+  enabled: true
+  architecture: standalone
+  replicaCount: 1
+  resources:
+    requests:
+      cpu: 0
+      memory: 0
+memcached-blocks:
+  architecture: standalone
+  replicaCount: 1
+  resources:
+    requests:
+      cpu: 0
+      memory: 0
+memcached-blocks-index:
+  architecture: standalone
+  replicaCount: 1
+  resources:
+    requests:
+      cpu: 0
+      memory: 0
+memcached-blocks-metadata:
+  architecture: standalone
+  replicaCount: 1
+  resources:
+    requests:
+      cpu: 0
+      memory: 0
