--- a/templates/runtime-configmap.yaml
+++ b/templates/runtime-configmap.yaml
@@ -1,10 +1,18 @@
+{{- with .Values.runtimeconfigmap }}
+{{- if .create }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "cortex.fullname" . }}-runtime-config
-  namespace: {{ .Release.Namespace }}
+  name: {{ template "cortex.fullname" $ }}-runtime-config
+  namespace: {{ $.Release.Namespace }}
   labels:
-    {{- include "cortex.labels" . | nindent 4 }}
+    {{- include "cortex.labels" $ | nindent 4 }}
+  {{- with .annotations -}}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 data:
   runtime_config.yaml: |
-    {{- tpl (toYaml .Values.runtime_config) . | nindent 4 }}
+    {{- tpl (toYaml .runtime_config) $ | nindent 4 }}
+{{- end }}
+{{- end }}
