--- a/values.yaml
+++ b/values.yaml
@@ -189,8 +189,13 @@ config:
     #  max_outstanding_per_tenant: 1000
     log_queries_longer_than: 10s
 
-# -- https://cortexmetrics.io/docs/configuration/arguments/#runtime-configuration-file
-runtime_config: {}
+runtimeconfigmap:
+  # -- If true, a configmap for the `runtime_config` will be created.
+  # If false, the configmap _must_ exist already on the cluster or pods will fail to create.
+  create: true
+  annotations: {}
+  # -- https://cortexmetrics.io/docs/configuration/arguments/#runtime-configuration-file
+  runtime_config: {}
 
 alertmanager:
   enabled: true
