--- a/ci/test-values.yaml
+++ b/ci/test-values.yaml
@@ -69,6 +69,9 @@ querier:
     enabled: true
 nginx:
   replicas: 1
+runtimeconfigmap:
+  annotations:
+    foo: bar
 
 tags:
   blocks-storage-memcached: true
