--- a/templates/runtime-configmap.yaml
+++ b/templates/runtime-configmap.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: {{ $.Release.Namespace }}
   labels:
     {{- include "cortex.labels" $ | nindent 4 }}
-  {{- with .annotations -}}
+  {{- with .annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
