Support customizing the nginx config with values
Signed-off-by: Tom Hayward <thayward@infoblox.com>

--- a/ci/test-values.yaml
+++ b/ci/test-values.yaml
@@ -69,6 +69,13 @@ querier:
     enabled: true
 nginx:
   replicas: 1
+  config:
+    httpSnippet: |-
+      # http snippet
+    mainSnippet: |-
+      # main snippet
+    serverSnippet: |-
+      # server snippet
 runtimeconfigmap:
   annotations:
     foo: bar
