--- a/Chart.yaml
+++ b/Chart.yaml
@@ -6,8 +6,12 @@ home: https://cortexmetrics.io/
 icon: https://avatars2.githubusercontent.com/u/43045022?s=200&v=4
 kubeVersion: ^1.19.0-0
 maintainers:
-  - email: cortex-team@googlegroups.com
-    name: Cortex Maintainers
+  - email: thayward@infoblox.com
+    name: Tom Hayward
+    url: https://github.com/kd7lxl
+  - email: Niclas.Schad@plusserver.com
+    name: Niclas Schad
+    url: https://github.com/ShuzZzle
 name: cortex
 sources:
   - https://github.com/cortexproject/cortex-helm-chart
