--- a/renovate.json
+++ b/renovate.json
@@ -9,14 +9,15 @@
         "kd7lxl"
     ],
     "labels": ["dependencies"],
-    "regexManagers": [{
-            "description": "Update cortex image in README.md",
-            "fileMatch": ["^README\\.md$"],
-            "matchStrings": [
-                "\\|\\s+image.&ZeroWidthSpace;tag\\s+\\|\\s+string\\s+\\|\\s+`\"(?<currentValue>.*?)\"`\\s+\\|\\s+\\|\\s+"
-            ],
-            "depNameTemplate": "quay.io/cortexproject/cortex",
-            "datasourceTemplate": "docker"
+    "regexManagers": [
+        {
+          "description": "Update cortex in Chart.yaml",
+          "fileMatch": ["^Chart\\.yaml$"],
+          "matchStrings": [
+            "appVersion: '(?<currentValue>.*?)'\\s+",
+          ],
+          "depNameTemplate": "quay.io/cortexproject/cortex",
+          "datasourceTemplate": "docker"
         },
         {
             "description": "Update nginx image in README.md",
