--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,8 @@
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
         "config:base",
-        ":gitSignOff"
+        ":gitSignOff",
+        ":rebaseStalePrs"
     ],
     "assignees": [
         "ShuzZzle",
