Enable bucket index by default.
The cortex docs recommend enabling the bucket index for both the querier
and the store-gateway: https://cortexmetrics.io/docs/blocks-storage/production-tips/.

Signed-off-by: Josh Carp <jm.carp@gmail.com>

--- a/values.yaml
+++ b/values.yaml
@@ -94,6 +94,8 @@ config:
       dir: /data/tsdb
     bucket_store:
       sync_dir: /data/tsdb-sync
+      bucket_index:
+        enabled: true
   # -- https://cortexmetrics.io/docs/configuration/configuration-file/#store_gateway_config
   store_gateway:
     sharding_enabled: false
