--- a/templates/nginx/nginx-poddisruptionbudget.yaml
+++ b/templates/nginx/nginx-poddisruptionbudget.yaml
@@ -1,5 +1,5 @@
 {{- if and (.Values.nginx.enabled) (gt (int .Values.nginx.replicas) 1) (.Values.nginx.podDisruptionBudget) }}
-{{- if .Capabilities.APIVersions.Has "policy/v1"}}
+{{- if or (.Capabilities.APIVersions.Has "policy/v1/PodDisruptionBudget") (semverCompare ">=1.21" .Capabilities.KubeVersion.Version) }}
 apiVersion: policy/v1
 {{- else }}
 apiVersion: policy/v1beta1
