--- a/templates/query-frontend/query-poddisruptionbudget.yaml
+++ b/templates/query-frontend/query-poddisruptionbudget.yaml
@@ -1,5 +1,5 @@
 {{- if and (gt (int .Values.query_frontend.replicas) 1) (.Values.query_frontend.podDisruptionBudget) }}
-{{- if .Capabilities.APIVersions.Has "policy/v1"}}
+{{- if or (.Capabilities.APIVersions.Has "policy/v1/PodDisruptionBudget") (semverCompare ">=1.21" .Capabilities.KubeVersion.Version) }}
 apiVersion: policy/v1
 {{- else }}
 apiVersion: policy/v1beta1
