--- a/templates/store-gateway/store-gateway-poddisruptionbudget.yaml
+++ b/templates/store-gateway/store-gateway-poddisruptionbudget.yaml
@@ -1,5 +1,5 @@
 {{- if and (gt (int .Values.store_gateway.replicas) 1) (.Values.store_gateway.podDisruptionBudget) }}
-{{- if .Capabilities.APIVersions.Has "policy/v1"}}
+{{- if or (.Capabilities.APIVersions.Has "policy/v1/PodDisruptionBudget") (semverCompare ">=1.21" .Capabilities.KubeVersion.Version) }}
 apiVersion: policy/v1
 {{- else }}
 apiVersion: policy/v1beta1
