--- a/templates/ingester/ingester-dep.yaml
+++ b/templates/ingester/ingester-dep.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.ingester.statefulSet.enabled -}}
+{{- if and (not .Values.ingester.statefulSet.enabled) .Values.ingester.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
