--- a/templates/ingester/ingester-svc-headless.yaml
+++ b/templates/ingester/ingester-svc-headless.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingester.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -20,3 +21,4 @@ spec:
       targetPort: grpc
   selector:
     {{- include "cortex.ingesterSelectorLabels" . | nindent 4 }}
+{{- end }}
