--- a/templates/ingester/ingester-svc.yaml
+++ b/templates/ingester/ingester-svc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingester.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -19,3 +20,4 @@ spec:
       targetPort: http-metrics
   selector:
     {{- include "cortex.ingesterSelectorLabels" . | nindent 4 }}
+{{- end }}
