include enabled flag for querier-frontend
Signed-off-by: Luiz Oliveira <ziuloliveira@gmail.com>

--- a/templates/query-frontend/query-frontend-servicemonitor.yaml
+++ b/templates/query-frontend/query-frontend-servicemonitor.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.query_frontend.serviceMonitor.enabled }}
+{{- if and .Values.query_frontend.serviceMonitor.enabled .Values.query_frontend.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
