--- a/templates/query-frontend/query-frontend-svc.yaml
+++ b/templates/query-frontend/query-frontend-svc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.query_frontend.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -19,3 +20,4 @@ spec:
       targetPort: http-metrics
   selector:
     {{- include "cortex.queryFrontendSelectorLabels" . | nindent 4 }}
+{{- end -}}
