--- a/templates/query-frontend/query-frontend-dep.yaml
+++ b/templates/query-frontend/query-frontend-dep.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.query_frontend.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -105,3 +106,4 @@ spec:
         {{- if .Values.query_frontend.extraVolumes }}
         {{- toYaml .Values.query_frontend.extraVolumes | nindent 8}}
         {{- end }}
+{{- end -}}
