--- a/templates/store-gateway/store-gateway-svc.yaml
+++ b/templates/store-gateway/store-gateway-svc.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.config.storage.engine "blocks" -}}
+{{- if and (eq .Values.config.storage.engine "blocks") (.Values.store_gateway.enabled) -}}
 apiVersion: v1
 kind: Service
 metadata:
