--- a/values.yaml
+++ b/values.yaml
@@ -323,6 +323,7 @@ alertmanager:
     resource: "both"
     containerSecurityContext:
       enabled: true
+      runAsUser: 0
       readOnlyRootFilesystem: true
 
 distributor:
