--- a/templates/nginx/nginx-config.yaml
+++ b/templates/nginx/nginx-config.yaml
@@ -67,6 +67,8 @@ data:
           return 200 'alive';
         }
 
+        {{- if .Values.distributor.enabled }}
+
         # Distributor Config
         location = /ring {
           proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
@@ -84,6 +86,8 @@ data:
         location = /api/v1/push {
           proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
         }
+
+        {{- end }}
 
         {{- if .Values.alertmanager.enabled }}
 
@@ -106,6 +110,8 @@ data:
 
         {{- end }}
 
+        {{- if .Values.ruler.enabled }}
+
         # Ruler Config
         location ~ /api/v1/rules {
           proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
@@ -119,10 +125,14 @@ data:
           proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
         }
 
+        {{- end }}
+
         # Config Config
         location ~ /api/prom/configs/.* {
           proxy_pass      http://{{ template "cortex.fullname" . }}-configs.{{ $rootDomain }}$request_uri;
         }
+
+        {{- if .Values.query_frontend.enabled }}
 
         # Query Config
         location ~ /api/prom/.* {
@@ -137,6 +147,9 @@ data:
         location ~ {{.Values.config.api.prometheus_http_prefix}}/api/v1/label/.* {
           proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
         }
+
+        {{- end }}
+
         {{- if and (.Values.config.auth_enabled) (.Values.nginx.config.auth_orgs) }}
         # Auth orgs
         {{- range $org := compact .Values.nginx.config.auth_orgs | uniq }}
