--- a/templates/nginx/nginx-config.yaml
+++ b/templates/nginx/nginx-config.yaml
@@ -127,10 +127,14 @@ data:
 
         {{- end }}
 
+        {{- if .Values.configs.enabled }}
+
         # Config Config
         location ~ /api/prom/configs/.* {
           proxy_pass      http://{{ template "cortex.fullname" . }}-configs.{{ $rootDomain }}$request_uri;
         }
+
+        {{- end }}
 
         {{- if .Values.query_frontend.enabled }}
 
