--- a/templates/nginx/nginx-config.yaml
+++ b/templates/nginx/nginx-config.yaml
@@ -37,12 +37,48 @@ data:
       {{ tpl . $ | nindent 6 }}
       {{- end }}
 
+      {{- if .Values.alertmanager.enabled }}
+      upstream alertmanager {
+        server {{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }};
+        keepalive {{ .Values.nginx.config.upstream_keepalive }};
+      }
+      {{- end }}
+
+      {{- if .Values.configs.enabled }}
+      upstream configs {
+        server {{ template "cortex.fullname" . }}-configs.{{ $rootDomain }};
+        keepalive {{ .Values.nginx.config.upstream_keepalive }};
+      }
+      {{- end }}
+
+      {{- if .Values.distributor.enabled }}
+      upstream distributor {
+        server {{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }};
+        keepalive {{ .Values.nginx.config.upstream_keepalive }};
+      }
+      {{- end }}
+
+      {{- if .Values.query_frontend.enabled }}
+      upstream query-frontend {
+        server {{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }};
+        keepalive {{ .Values.nginx.config.upstream_keepalive }};
+      }
+      {{- end }}
+
+      {{- if .Values.ruler.enabled }}
+      upstream ruler {
+        server {{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }};
+        keepalive {{ .Values.nginx.config.upstream_keepalive }};
+      }
+      {{- end }}
+
       server { # simple reverse-proxy
         listen {{ .Values.nginx.http_listen_port }};
         proxy_connect_timeout 300s;
         proxy_send_timeout 300s;
         proxy_read_timeout 300s;
         proxy_http_version 1.1;
+        proxy_set_header Connection "";  ## Enable keepalive to upstreams
 
         {{- range $key, $value := .Values.nginx.config.setHeaders }}
         proxy_set_header {{ $key }} {{ $value }};
@@ -71,20 +107,20 @@ data:
 
         # Distributor Config
         location = /ring {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://distributor$request_uri;
         }
 
         location = /all_user_stats {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://distributor$request_uri;
         }
 
         location = /api/prom/push {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://distributor$request_uri;
         }
 
         ## New Remote write API. Ref: https://cortexmetrics.io/docs/api/#remote-write
         location = /api/v1/push {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://distributor$request_uri;
         }
 
         {{- end }}
@@ -93,19 +129,19 @@ data:
 
         # Alertmanager Config
         location ~ /api/prom/alertmanager/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://alertmanager$request_uri;
         }
 
         location ~ /api/v1/alerts {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://alertmanager$request_uri;
         }
 
         location ~ /multitenant_alertmanager/status {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://alertmanager$request_uri;
         }
 
         location = /api/prom/api/v1/alerts {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}/api/v1/alerts;
+          proxy_pass      http://alertmanager/api/v1/alerts;
         }
 
         {{- end }}
@@ -114,15 +150,15 @@ data:
 
         # Ruler Config
         location ~ /api/v1/rules {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://ruler$request_uri;
         }
 
         location ~ /ruler/ring {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://ruler$request_uri;
         }
 
         location ~ /api/prom/rules {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://ruler$request_uri;
         }
 
         {{- end }}
@@ -131,7 +167,7 @@ data:
 
         # Config Config
         location ~ /api/prom/configs/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-configs.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://configs$request_uri;
         }
 
         {{- end }}
@@ -140,16 +176,16 @@ data:
 
         # Query Config
         location ~ /api/prom/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://query-frontend$request_uri;
         }
 
         ## New Query frontend APIs as per https://cortexmetrics.io/docs/api/#querier--query-frontend
         location ~ ^{{.Values.config.api.prometheus_http_prefix}}/api/v1/(read|metadata|labels|series|query_range|query) {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://query-frontend$request_uri;
         }
 
         location ~ {{.Values.config.api.prometheus_http_prefix}}/api/v1/label/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
+          proxy_pass      http://query-frontend$request_uri;
         }
 
         {{- end }}
@@ -159,7 +195,7 @@ data:
         {{- range $org := compact .Values.nginx.config.auth_orgs | uniq }}
         location = /api/v1/push/{{ $org }} {
           proxy_set_header      X-Scope-OrgID {{ $org }};
-          proxy_pass      http://{{ template "cortex.fullname" $ }}-distributor.{{ $rootDomain }}/api/v1/push;
+          proxy_pass      http://distributor/api/v1/push;
         }
         {{- end }}
         {{- end }}
