--- a/templates/query-scheduler/query-scheduler-poddisruptionbudget.yaml
+++ b/templates/query-scheduler/query-scheduler-poddisruptionbudget.yaml
@@ -1,9 +1,5 @@
 {{- if and (.Values.query_scheduler.enabled) (gt (int .Values.query_scheduler.replicas) 1) (.Values.query_scheduler.podDisruptionBudget) }}
-{{- if .Capabilities.APIVersions.Has "policy/v1"}}
-apiVersion: policy/v1
-{{- else }}
-apiVersion: policy/v1beta1
-{{- end }}
+apiVersion: {{ include "cortex.pdbVersion" . }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "cortex.querySchedulerFullname" . }}
