--- a/ci/test-deployment-values.yaml
+++ b/ci/test-deployment-values.yaml
@@ -48,6 +48,12 @@ config:
     join_members:
       - '{{ include "cortex.fullname" $ }}-memberlist'
 
+  frontend:
+    scheduler_address: 'dns+{{ include "cortex.querySchedulerFullname" $ }}-headless:9095'
+
+  frontend_worker:
+    scheduler_address: 'dns+{{ include "cortex.querySchedulerFullname" $ }}-headless:9095'
+
 ingester:
   replicas: 1
   autoscaling:
@@ -95,6 +101,15 @@ query_frontend:
   extraVolumes:
     - name: tmp-test
       emptyDir: {}
+  extraVolumeMounts:
+    - name: tmp-test
+      mountPath: /tmp-test
+query_scheduler:
+  replicas: 1
+  enabled: true
+  extraVolumes:
+    - name: tmp-test
+      emptyDir: { }
   extraVolumeMounts:
     - name: tmp-test
       mountPath: /tmp-test
